--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,7 @@
 @import url('__logo/header__logo.css');
 
 .header {
-
+  max-width: 882px;
   border-bottom: 1px solid rgba(84,84,84,.7);
+  margin: 0 auto;
 }
