style: add backgrounds to buttons

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,4 +3,6 @@
   margin: auto;
   background: #000000;
   font-family: 'Inter',Arial, Helvetica, sans-serif;
+  color: white;
+  max-width: 882px;
 }
