--- a/blocks/profile/__btn/_type/profile__btn_type_add.css
+++ b/blocks/profile/__btn/_type/profile__btn_type_add.css
@@ -1,5 +1,5 @@
 .profile__btn_type_add {
-  background-image: url('../../../images/plus.svg');
+  background-image: url('../../../../images/plus.svg');
   width: 150px;
   height: 50px;
   border: 2px solid #FFFFFF;
