--- a/blocks/profile/__btn/_type/profile__btn_type_edit.css
+++ b/blocks/profile/__btn/_type/profile__btn_type_edit.css
@@ -1,5 +1,5 @@
 .profile__btn_type_edit {
-  background-image: url('../../../images/edit.svg');
+  background-image: url('../../../../images/edit.svg');
   width: 24px;
   height: 24px;
   border: 1px solid #FFFFFF;
