--- a/pages/index.css
+++ b/pages/index.css
@@ -3,3 +3,5 @@
 @import url('../blocks/header/header.css');
 @import url('../blocks/page/page.css');
 @import url('../blocks/profile/profile.css');
+@import url('../blocks/card/card.css');
+@import url('../blocks/gallery/gallery.css');
