--- a/pages/index.css
+++ b/pages/index.css
@@ -5,3 +5,4 @@
 @import url('../blocks/profile/profile.css');
 @import url('../blocks/card/card.css');
 @import url('../blocks/gallery/gallery.css');
+@import url('../blocks/footer/footer.css');
