--- a/pages/index.css
+++ b/pages/index.css
@@ -6,3 +6,4 @@
 @import url('../blocks/card/card.css');
 @import url('../blocks/gallery/gallery.css');
 @import url('../blocks/footer/footer.css');
+@import url('../blocks/popup/popup.css');
