--- a/pages/index.css
+++ b/pages/index.css
@@ -7,3 +7,4 @@
 @import url('../blocks/gallery/gallery.css');
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/popup/popup.css');
+@import url('../blocks/form/form.css');
