feat: make responsive header

--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -4,3 +4,17 @@
   padding-bottom: 41px;
   padding-top: 45px;
 }
+
+@media screen and (min-width: 320px) and (max-width: 882px) {
+  .header__logo {
+    padding-left: 27px
+  }
+}
+
+@media screen and (max-width: 320px){
+  .header__logo {
+    max-width: 126px;
+    padding-top: 28px;
+    padding-bottom: 32px;
+  }
+}
