--- a/blocks/profile/__image/profile__image.css
+++ b/blocks/profile/__image/profile__image.css
@@ -3,3 +3,9 @@
   height: 120px;
   border-radius: 50%;
 }
+
+@media screen and (max-width: 320px) {
+  .profile__image {
+    justify-self: center;
+  }
+}
