--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,3 +5,10 @@ line-height: 56px;
 margin: 0;
 padding-bottom: 6px;
 }
+
+
+@media screen and (max-width: 320px) {
+ .profile__name {
+   font-size: 22px;
+ }
+}
