--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -4,3 +4,12 @@ font-size: 18px;
 line-height: 22px;
 margin: 0;
 }
+
+@media screen and (max-width: 320px) {
+  .profile__subtitle {
+    font-size: 14px;
+    line-height: 17px;
+    width: 100%;
+    text-align: center;
+  }
+}
