--- a/blocks/profile/__image/profile__image.css
+++ b/blocks/profile/__image/profile__image.css
@@ -4,7 +4,13 @@
   border-radius: 50%;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 740px) {
+  .profile__image {
+    justify-self: end;
+  }
+}
+
+@media screen and (max-width: 480px) {
   .profile__image {
     justify-self: center;
   }
