--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -12,11 +12,19 @@
   grid-template-columns: 1fr 3fr 1fr;
   grid-auto-rows: min-content;
   align-items: center;
+  max-width: 882px;
+  width: 100%;
+}
+
+@media screen and (max-width: 740px) {
+  .profile {
+    grid-template-columns: 1fr 3fr;
+    grid-gap: 5%;
+  }
 }
 
 
-
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 480px) {
   .profile {
     grid-template-columns: 1fr;
   }
