refactor block and add media block

--- a/blocks/media/__btn/media__btn.css
+++ b/blocks/media/__btn/media__btn.css
@@ -1,15 +1,20 @@
-.profile__btn_type_edit {
+.media__btn {
   background-image: url('../../../../images/edit.svg');
   width: 24px;
   height: 24px;
   border: 1px solid #FFFFFF;
   background-size: 7px 7px;
   margin-left: 24px;
+  box-sizing: border-box;
+  background-color: #000000;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-image: none;
 
 }
 
 @media screen and (max-width: 320px) {
-  .profile__btn_type_edit {
+  .media__btn {
     font-size: 14px;
     line-height: 17px;
     width: 18px;
