--- a/blocks/media/__image/media__image.css
+++ b/blocks/media/__image/media__image.css
@@ -1,17 +1,17 @@
-.profile__image {
+.media__image {
   width: 120px;
   height: 120px;
   border-radius: 50%;
 }
 
 @media screen and (max-width: 740px) {
-  .profile__image {
+  .media__image {
     justify-self: end;
   }
 }
 
 @media screen and (max-width: 480px) {
-  .profile__image {
+  .media__image {
     justify-self: center;
   }
 }
