--- a/blocks/profile/__btn/profile__btn.css
+++ b/blocks/profile/__btn/profile__btn.css
@@ -5,7 +5,25 @@
   background-repeat: no-repeat;
   background-position: center;
   border-image: none;
+  background-image: url('../../../../images/plus.svg');
+  width: 150px;
+  height: 50px;
+  border: 2px solid #FFFFFF;
+  background-size: 22px 22px;
+  justify-self: end;
 }
 
+@media screen and (max-width: 740px) {
+  .profile__btn {
+    justify-self: start;
+    grid-column: span 1/-1;
 
-
+  }}
+  @media screen and (max-width: 480px) {
+    .profile__btn {
+      width: 100%;
+      max-width: 282px;
+    background-size: 16px 16px;
+    margin-top: 36px;
+    }
+  }
