--- a/blocks/media/__name/media__name.css
+++ b/blocks/media/__name/media__name.css
@@ -1,4 +1,4 @@
-.profile__name {
+.media__name {
   font-weight: 500;
 font-size: 42px;
 line-height: 56px;
@@ -8,13 +8,13 @@ padding-bottom: 6px;
 
 
 @media screen and (min-width: 321px) and (max-width: 882px){
-  .profile__name {
+  .media__name {
     font-size: 5vw;
   }
 }
 
 @media screen and (max-width: 320px) {
- .profile__name {
+ .media__name {
    font-size: 22px;
  }
 }
