--- a/pages/index.css
+++ b/pages/index.css
@@ -3,6 +3,7 @@
 @import url('../blocks/header/header.css');
 @import url('../blocks/page/page.css');
 @import url('../blocks/profile/profile.css');
+@import url('../blocks/media/media.css');
 @import url('../blocks/card/card.css');
 @import url('../blocks/gallery/gallery.css');
 @import url('../blocks/footer/footer.css');
