--- a/blocks/media/__image/media__image.css
+++ b/blocks/media/__image/media__image.css
@@ -2,13 +2,9 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
+  grid-area: image;
 }
 
-@media screen and (max-width: 740px) {
-  .media__image {
-    justify-self: end;
-  }
-}
 
 @media screen and (max-width: 480px) {
   .media__image {
