--- a/blocks/media/media.css
+++ b/blocks/media/media.css
@@ -1,6 +1,16 @@
 @import url('__body/media__body.css');
 @import url('__image/media__image.css');
 @import url('__btn/media__btn.css');
-@import url('__info/media__info.css');
+@import url('__item/media__item.css');
 @import url('__name/media__name.css');
 @import url('__subtitle/media__subtitle.css');
+
+.media {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  grid-area: media;
+}
