--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -1,9 +1,10 @@
 .gallery {
   display: grid;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
   grid-auto-columns: min-content;
-  grid-gap: 2%;
+  grid-gap: 21px 18px;
   list-style-type: none;
-  margin: 0;
   padding: 47px 0 0 0;
 }
+
+
