feat: make responsive

--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -10,3 +10,17 @@
   box-sizing: border-box;
 
 }
+
+@media screen and (max-width: 740px) {
+  .popup__container {
+    max-width: 250px;
+  }
+}
+
+
+
+@media screen and (max-width: 740px) {
+  .popup__container {
+    max-width: 250px;
+  }
+}
