--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,12 +4,12 @@
 .popup {
   position: fixed;
   top: 0;
-  bottom: 0;
-  right: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
   background-color: rgba(0,0,0,.5);
   display: flex;
   justify-content: center;
   align-items: center;
-  display: none;
+  /* display: none; */
 }
