--- a/blocks/form/__submit-btn/form__submit-btn.css
+++ b/blocks/form/__submit-btn/form__submit-btn.css
@@ -1,6 +1,5 @@
 .form__submit-btn {
   width: 100%;
-    background-color: #000;
     border-radius: 2px;
     color: #fff;
     border-style: none;
@@ -8,4 +7,10 @@
     font-size: 18px;
     line-height: 2.5;
     margin-top: 48px;
+    background-color: #000000;
+}
+
+.form__submit-btn:hover{
+  cursor: pointer;
+  opacity: .8;
 }
