--- a/blocks/popup/__btn-close/popup__btn-close.css
+++ b/blocks/popup/__btn-close/popup__btn-close.css
@@ -1,17 +1,15 @@
 .popup__btn-close {
-    background-image: url(../../../images/close_icon.svg);
+    background-image: url('../../../images/close_icon.svg');
     position: absolute;
     border-style: none;
     width: 41px;
     height: 41px;
     top: -43px;
     left: 427px;
-
 }
 
 @media screen and (max-width: 570px){
   .popup__btn-close {
     left: 248px;
-
   }
 }
