--- a/blocks/form/__submit-btn/form__submit-btn.css
+++ b/blocks/form/__submit-btn/form__submit-btn.css
@@ -1,18 +1,18 @@
 .form__submit-btn {
   width: 100%;
-    border-radius: 2px;
-    color: #fff;
-    border-style: none;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 2.5;
-    margin-top: 48px;
-    background-color: #000000;
-    padding-top: 14px;
-    padding-bottom: 14px;
+  border-radius: 2px;
+  color: #fff;
+  border-style: none;
+  font-weight: normal;
+  margin-top: 48px;
+  background-color: #000000;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  font-size: 18px;
+  line-height: 1.2;
 }
 
-.form__submit-btn:hover{
+.form__submit-btn:hover {
   cursor: pointer;
-  opacity: .8;
+  opacity: 0.8;
 }
