--- a/blocks/media/__btn/media__btn.css
+++ b/blocks/media/__btn/media__btn.css
@@ -2,11 +2,10 @@
   background-image: url('../../../../images/edit.svg');
   width: 24px;
   height: 24px;
-  border: 1px solid #FFFFFF;
+  border: 1px solid #ffffff;
   background-size: 7px 7px;
   margin-left: 24px;
   margin-bottom: -6px;
-
 }
 
 @media screen and (max-width: 320px) {
