--- a/blocks/profile/__btn/profile__btn.css
+++ b/blocks/profile/__btn/profile__btn.css
@@ -1,9 +1,8 @@
-
 .profile__btn {
   background-image: url('../../../../images/plus.svg');
   width: 150px;
   height: 50px;
-  border: 2px solid #FFFFFF;
+  border: 2px solid #ffffff;
   background-size: 22px 22px;
   grid-area: button;
   justify-self: end;
@@ -16,12 +15,10 @@
   }
 }
 
-
-
-  @media screen and (max-width: 480px) {
-    .profile__btn {
-      width: 100%;
-      max-width: 282px;
+@media screen and (max-width: 480px) {
+  .profile__btn {
+    width: 100%;
+    max-width: 282px;
     background-size: 16px 16px;
-    }
   }
+}
