--- a/blocks/form/__title/form__title.css
+++ b/blocks/form/__title/form__title.css
@@ -1,8 +1,7 @@
 .form__title {
   font-weight: 900;
   font-size: 24px;
-  line-height: 29px;
-  color: black;
+  color: #000;
   margin: 0;
   padding-bottom: 24px;
 }
