--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -7,11 +7,11 @@
 
 @media screen and (min-width: 320px) and (max-width: 882px) {
   .header__logo {
-    padding-left: 27px
+    padding-left: 27px;
   }
 }
 
-@media screen and (max-width: 320px){
+@media screen and (max-width: 320px) {
   .header__logo {
     max-width: 126px;
     padding-top: 28px;
