--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,5 @@
 @import url('__logo/header__logo.css');
 
 .header {
-  max-width: 882px;
-  border-bottom: 1px solid rgba(84,84,84,.7);
-  margin: 0 auto;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
-
