--- a/blocks/media/__name/media__name.css
+++ b/blocks/media/__name/media__name.css
@@ -1,21 +1,20 @@
 .media__name {
   font-weight: 500;
-font-size: 42px;
-line-height: 56px;
-margin: 0;
+  font-size: 42px;
+  line-height: 1.3;
+  margin: 0;
 }
 
-
-@media screen and (max-width: 810px){
+@media screen and (max-width: 810px) {
   .media__name {
     font-size: 5vw;
   }
 }
 
 @media screen and (max-width: 480px) {
- .media__name {
-   padding-top: 15px;
-   font-size: 22px;
-   text-align: center;
- }
+  .media__name {
+    padding-top: 15px;
+    font-size: 22px;
+    text-align: center;
+  }
 }
