--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,11 +2,11 @@
 
 .page {
   margin: 0 auto;
-  background: #000000;
-  font-family: 'Inter',Arial, Helvetica, sans-serif;
+  background: #000;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-weight: normal;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 1.2;
   color: #fff;
   max-width: 882px;
 }
@@ -14,6 +14,5 @@
 @media screen and (max-width: 480px) {
   .page {
     font-size: 14px;
-    line-height: 17px;
   }
 }
