--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,26 +1,19 @@
-
 @import url('__btn/profile__btn.css');
 
 .profile {
   padding-top: 36px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(282px,1fr));
-    grid-template-areas: "media button";
-    width: 100%;
-    align-items: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+  grid-template-areas: 'media button';
+  align-items: center;
 }
 
 @media screen and (max-width: 740px) {
   .profile {
     grid-template-columns: 1fr;
     grid-template-areas:
-    "media"
-    "button";
+      'media'
+      'button';
     grid-auto-rows: min-content;
   }
 }
-
-
-
-
-
