feat: add link to github pages and fix path to images

--- a/blocks/media/__btn/media__btn.css
+++ b/blocks/media/__btn/media__btn.css
@@ -1,5 +1,5 @@
 .media__btn {
-  background-image: url('../../../../images/edit.svg');
+  background-image: url('../../../images/edit.svg');
   width: 24px;
   height: 24px;
   border: 1px solid #ffffff;
