--- a/blocks/media/media.css
+++ b/blocks/media/media.css
@@ -3,6 +3,7 @@
 @import url('__btn/media__btn.css');
 @import url('__item/media__item.css');
 @import url('__name/media__name.css');
+@import url('__job/media__job.css');
 
 .media {
   display: flex;
