--- a/blocks/card/__img/card__img.css
+++ b/blocks/card/__img/card__img.css
@@ -1,5 +1,7 @@
 .card__img {
   width: 100%;
   height: auto;
-  object-fit: cover;
+  background-repeat: no-repeat;
+  padding-top: 100%;
+  background-size: cover;
 }
