--- a/blocks/card/__img/card__img.css
+++ b/blocks/card/__img/card__img.css
@@ -4,4 +4,6 @@
   background-repeat: no-repeat;
   padding-top: 100%;
   background-size: cover;
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
 }
