feat: like button change color

--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -1,10 +1,10 @@
-.card__btn {
+.card__like {
   border-style: none;
   background-color: white;
   align-self: center;
   width: 21px;
   height: 18px;
-  background-image: url(../../../images/heart.svg);
+  background-image: url('../../../images/heart.svg');
   background-repeat: no-repeat;
   margin-right: 21px;
 }
