--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -2,6 +2,7 @@
 @import url('__like/_active/card__like_active.css');
 @import url('__img/card__img.css');
 @import url('__title/card__title.css');
+@import url('__del/card__del.css');
 
 .card {
   display: flex;
@@ -9,4 +10,5 @@
   background: #fff;
   border-radius: 10px;
   justify-content: space-between;
+  position: relative;
 }
