--- a/blocks/media/__btn/media__btn.css
+++ b/blocks/media/__btn/media__btn.css
@@ -6,6 +6,7 @@
   background-size: 7px 7px;
   margin-left: 24px;
   margin-bottom: -6px;
+  background-color: #000;
 }
 
 @media screen and (max-width: 320px) {
