--- a/blocks/profile/__btn/profile__btn.css
+++ b/blocks/profile/__btn/profile__btn.css
@@ -6,6 +6,7 @@
   background-size: 22px 22px;
   grid-area: button;
   justify-self: end;
+  background-color: #000;
 }
 
 @media screen and (max-width: 810px) {
