--- a/blocks/form/__submit-btn/form__submit-btn.css
+++ b/blocks/form/__submit-btn/form__submit-btn.css
@@ -16,3 +16,13 @@
   cursor: pointer;
   opacity: 0.8;
 }
+
+@media screen and (max-width: 480px){
+  .form__submit-btn {
+    font-size: 14px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    margin-top: 30px;
+
+  }
+}
