--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,17 +1,20 @@
 .popup__container {
   max-width: 430px;
-  display: flex;
   flex-direction: column;
   background-color: #fff;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-  position: relative;
   padding: 36px;
   box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  position: relative;
 }
 
-@media screen and (max-width: 570px) {
+@media screen and (max-width: 320px) {
   .popup__container {
-    max-width: 250px;
+    max-width: 240px;
+    padding: 30px 20px;
+    width: 83vw;
   }
 }
