--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,6 +1,11 @@
 @import url('__container/popup__container.css');
+@import url('__container/_picture/popup__container_picture.css');
 @import url('__btn-close/popup__btn-close.css');
 @import url('_visible/popup_visible.css');
+@import url('__image/popup__image.css');
+@import url('__title/popup__title.css');
+@import url('_background/popup_background_dark.css');
+@import url('_background/popup_background_light.css');
 
 .popup {
   position: fixed;
@@ -8,7 +13,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
   justify-content: center;
   align-items: center;
   display: none;
