--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,8 +6,10 @@
 @import url('__title/popup__title.css');
 @import url('_background/popup_background_dark.css');
 @import url('_background/popup_background_light.css');
+@import url('_fade-out/popup_fade-out.css');
 
 .popup {
+  display: flex;
   position: fixed;
   top: 0;
   left: 0;
@@ -15,5 +17,7 @@
   height: 100%;
   justify-content: center;
   align-items: center;
-  display: none;
+  visibility: hidden;
+  opacity: 0;
 }
+
