--- a/blocks/popup/_visible/popup_visible.css
+++ b/blocks/popup/_visible/popup_visible.css
@@ -1,6 +1,6 @@
-/*this overwrites a default display value of a popup*/
+/* this overwrites a default display value of a popup*/
 
-@keyframes fade-in {
+/* @keyframes fade-in {
   from {
     opacity: 0;
     visibility: hidden;
@@ -13,6 +13,10 @@
 
 .popup.popup_visible {
   animation: fade-in 250ms ease-in;
-  visibility: visible;
+}
+*/
+.popup.popup_visible {
   opacity: 1;
+  visibility: visible;
+  transition: visibility 0s linear 0s, opacity 0.25s 0s;
 }
