--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -18,6 +18,7 @@
   height: 100%;
   justify-content: center;
   align-items: center;
+  pointer-events: none;
   visibility: hidden;
   opacity: 0;
 }
