fix: change BEM modifiers

--- a/blocks/popup/_role/popup_role_fade-out.css
+++ b/blocks/popup/_role/popup_role_fade-out.css
@@ -1,5 +1,5 @@
 
-.popup_fade-out {
+.popup_role_fade-out {
   visibility: visible;
   opacity: 1;
   transition: visibility 0s 250ms, opacity 250ms ease-out;
