--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -2,12 +2,12 @@
 @import url('__container/_type/popup__container_type_picture.css');
 @import url('__container/_type/popup__container_type_form.css');
 @import url('__btn-close/popup__btn-close.css');
-@import url('_visible/popup_visible.css');
+@import url('_role//popup_role_show.css');
 @import url('__image/popup__image.css');
 @import url('__title/popup__title.css');
 @import url('_background/popup_background_dark.css');
 @import url('_background/popup_background_light.css');
-@import url('_fade-out/popup_fade-out.css');
+@import url('_role/popup_role_fade-out.css');
 
 .popup {
   display: flex;
