--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,3 +1,4 @@
 @import url('__title/form__title.css');
 @import url('__input/form__input.css');
 @import url('__submit-btn/form__submit-btn.css');
+@import url('__input/_type/form__input_type_error.css');
