--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -2,3 +2,5 @@
 @import url('__input/form__input.css');
 @import url('__submit-btn/form__submit-btn.css');
 @import url('__input/_type/form__input_type_error.css');
+@import url('__input-error/form__input-error.css');
+@import url('__input-error/_active/form__input-error_active.css');
