feat: add validation pattern

--- a/blocks/form/__input-error/form__input-error.css
+++ b/blocks/form/__input-error/form__input-error.css
@@ -1,6 +1,6 @@
-.form_input-error {
+.form__input-error {
   font-size: 12px;
   line-height: 15px;
   color: #FF0000;
-  display: none;
+  visibility: hidden;
 }
