--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -10,6 +10,10 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
+.form__input:focus {
+  outline: none;
+}
+
 @media screen and (max-width: 480px) {
   .form__input {
     font-size: 12px;
