--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,6 +1,7 @@
 @import url('__title/form__title.css');
 @import url('__input/form__input.css');
 @import url('__submit-btn/form__submit-btn.css');
+@import url('__submit-btn/_inactive/form__submit-btn_inactive.css');
 @import url('__input/_type/form__input_type_error.css');
 @import url('__input-error/form__input-error.css');
 @import url('__input-error/_active/form__input-error_active.css');
