--- a/blocks/form/__submit-btn/_inactive/form__submit-btn_inactive.css
+++ b/blocks/form/__submit-btn/_inactive/form__submit-btn_inactive.css
@@ -1,6 +1,6 @@
 .form__submit-btn_inactive {
-  opacity: .2;
-  background-color: #E5E5E5;
+  opacity: 0.2;
+  background-color: #e5e5e5;
   border: 1px solid #000;
   color: #000;
 }
