feat: add overlay with button over avatar

--- a/src/blocks/media/media.css
+++ b/src/blocks/media/media.css
@@ -3,12 +3,17 @@
 @import url('__btn/media__btn.css');
 @import url('__item/media__item.css');
 @import url('__name/media__name.css');
+@import url('__image-container/media__image-container.css');
 @import url('__job/media__job.css');
+@import url('__btn/_hoverable/media__btn_hoverable.css');
+@import url('__btn/_size/media__btn_size_lg.css');
+@import url('__btn/_size/media__btn_size_sm.css');
 
 .media {
   display: flex;
   grid-area: media;
   align-items: center;
+
 }
 
 @media screen and (max-width: 480px) {
