feat: format document remove unused constants

--- a/src/blocks/media/__btn/_size/media__btn_size_sm.css
+++ b/src/blocks/media/__btn/_size/media__btn_size_sm.css
@@ -1,7 +1,7 @@
 .media__btn_size_sm {
   width: 24px;
   height: 24px;
-  border: 1px solid #ffffff;
+  border: 1px solid #fff;
   background-size: 7px 7px;
   margin-left: 24px;
   margin-bottom: -6px;
