--- a/src/blocks/media/__btn/_size/media__btn_size_lg.css
+++ b/src/blocks/media/__btn/_size/media__btn_size_lg.css
@@ -9,7 +9,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, .8);
 }
 
 
